--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 :root{
     --primary-color: #000;
     --secondary-color: white;   
@@ -9,6 +11,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Outfit", sans-serif;
 }
 .navbar-wrapper{
     background: var(--primary-color);
@@ -27,16 +30,25 @@
 .nav-logo img{
     width: 250px;
 }
-.nav-items .nav-ul{
+.checkbtn{
+    display: none;
+}
+.cross{
+    display: none;
+}
+.nav-container input{
+    display: none;
+}
+.nav-ul{
     display: flex;
     list-style: none;
-    gap: 50px;
+    gap: 45px;
     align-items: center;
 }
-.nav-items ul li{
+.nav-ul li{
     cursor: pointer;
 }
-.nav-items a{
+.nav-ul a{
     text-decoration: none;
     color: var(--secondary-color);
 }
@@ -53,7 +65,6 @@
 }
 .hero-wrapper{
     width: 100%;
-    height: 70vh;
 }
 .hero-bg-images img{
     height: 70vh;
@@ -244,7 +255,7 @@
 }
 
 .gallery-wrapper{
-    background: var(--accent-color);
+    background: var(--accent-color) !important;
     color: var(--secondary-color);
     text-align: center;
     padding-top: 80px;
@@ -339,6 +350,9 @@
   transform: rotate(-45deg);
   display: inline-block; 
 }
+.bars{
+    display: none;
+}
 
 
 
@@ -352,16 +366,34 @@
 }
 .breadcrumb-container{
     text-align: center;
+    display: flex;
+    gap: 20px;
 }
 .breadcrumb h1{
     align-items: center;
     justify-content: center;
 }
+a{
+    color: var(--secondary-color)!important;
+    text-decoration: none!important;
+}
+.breadcrumb-heading span,
+.breadcrumb-heading-a span{
+    background: var(--secondary-color);
+    color: var(--primary-color);
+    border-radius: 10px;
+    padding: 5px;
+}
+.breadcrumb-heading h1{
+    margin-top: 70px;
+}
+.breadcrumb-heading-a h1{
+    margin-top: 70px;
+}
 .about-about-wrapper{
     background: var(--primary-color);
     color: var(--secondary-color);
     padding-bottom: 60px;
-
 }
 .about-about{
     display: flex;
@@ -390,7 +422,6 @@
     background: var(--primary-color);
     color: var(--secondary-color);
     padding-top: 80px;
-    padding-bottom: 80px;
 }
 .about-why-choose-us{
     display: flex;
@@ -399,6 +430,33 @@
 .about-why-choose-us-left img{
     width: 600px;
     height: 550px;
+}
+.about-why-choose-us-left-img{
+    position: relative;
+}
+.swiper{
+    width: 250px;
+    height: 220px;
+    position: absolute;
+    top: -25%;
+    left: 20%;
+}
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: var(--accent-color);
+    color: var(--secondary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+.swiper-slide svg {
+    display: block;
+    margin: 0 auto;
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
 }
 .about-why-choose-us-right{
      margin-top: 100px;
@@ -410,6 +468,9 @@
     margin-left: 30px;
 }
 .about-why-choose-us-right h6{
+    margin-left: 30px;
+}
+.about-why-choose-us-right button{
     margin-left: 30px;
 }
 .quality-list{
@@ -450,10 +511,10 @@
 }
 .about-get-quote-right{
     padding-top: 30px;
-    padding-right: 30px;
+    padding-left: 100px;
 }
 .gallery-wrapper{
-    background: var(--primary-color);
+    background: var(--primary-color) !important;
     padding-bottom: 80px;
 }
 .gallery-container img{
@@ -462,6 +523,9 @@
     margin-bottom: 30px;
     border-radius: 25px;
     object-fit: cover;
+}
+.gallery-container img {
+  transition: transform 0.3s ease, opacity 0.3s ease;
 }
 .contact-information-wrapper{
     background: var(--primary-color);
@@ -481,6 +545,24 @@
     padding-top: 25px;
     padding-bottom: 15px;
 }
+.img-shake img{
+    animation: shake 0.5s;
+    animation-iteration-count: infinite ;
+}
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 .contact-information .row{
     gap: 20px;
 }
@@ -501,6 +583,7 @@
     background: var(--fourth-color);
     color: var(--secondary-color) !important;
     border: none;
+    margin-bottom: 10px;
 }
 .contact-quote input:focus,
 .contact-quote textarea:focus {
@@ -564,4 +647,397 @@ textarea::placeholder{
     width: 600px;
     height: 400px;
     object-fit: cover;
+}
+
+.videos-wrapper{
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    text-align: center;
+}
+
+
+@media (max-width: 1200px){
+    .nav-ul{
+        gap: 20px;
+    }
+    .nav-container{
+        gap: 180px;
+    }
+    .hero-bg-images img{
+        height: 100vh;
+    }
+    .carousel-text{
+        top: 80%;
+        left: 35%;
+    }
+    .about img{
+        width: 450px;
+        height: 500px;
+    }
+    .about-left{
+        padding-top: 20px;
+        padding-right: 20px;
+    }
+    .about-bottom-right img{
+        width: 45px;
+        height: 45px;
+    }
+    .about-bottom-right{
+        gap: 10px;
+        margin-right: 10px;
+    }
+    .about-bottom{
+        gap: 20px;
+    }
+    .service-images img{
+        width: 300px;
+    }
+    .gallery-images img{
+        width: 300px;
+    }
+    .footer-top{
+        gap: 50px;
+    }
+    .swiper{
+        left: 60px;
+    }
+    .about-right-image img{
+        width: 500px;
+        height: 600px;
+    }
+    .about-left-side{
+        margin-top: 20px;
+    }
+    .about-services-img{
+        width: 80px;
+    }
+    .about-why-choose-us-left img{
+        width: 400px;
+        height: 550px;
+    }
+    .about-why-choose-us-right{
+        margin-top: 30px;
+    }
+    .about-why-choose-us{
+        gap: 20px;
+    }
+    .about-get-quote-right{
+        padding-left: 50px;
+    }
+    .gallery-container img{
+        width: 300px;
+        height: 300px;
+    }
+    .contact-information .dark{
+        width: 300px;
+    }
+    .breadcrumb-gif img{
+        width: 500px;
+        margin-right: 30px;
+    }
+    .maintenance img{
+        width: 450px;
+    }
+    .outer{
+        width: 200px !important;
+    }
+    .maintain{
+        width: 450px !important;
+    }
+    .quote-left img{
+        width: 500px;
+        margin-top: 50px;
+    }
+}
+@media (max-width: 1200px) and (height>1000px) {
+  .hero-bg-images img{
+    height: 50vh;
+  }
+  .carousel-text{
+    top: 35%;
+    left: 35%;
+  }
+}
+
+
+
+@media (max-width: 992px){
+    .checkbtn{
+        display: block;
+        margin-left: 200px;
+    }
+    .cross{
+        display: block;
+        border-radius: 50%;
+        background: var(--primary-color);
+        color: var(--secondary-color);
+        border: none;
+    }
+    .bars input{
+        display: none;
+    }
+    .checkbtn{
+        font-size: 3rem;
+    }
+    .nav-ul {
+        flex-direction: column;
+        position: absolute;
+        width: 50%;
+        right: 100%;
+        height: 100%;
+        top: 20px;
+        z-index: 1000;
+        background: var(--primary-color);
+    }
+
+    #check:checked ~ .nav-ul {
+        right: 0;
+    }
+    .nav-ul li {
+        width: 100%;
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    .nav-ul .dropdown {
+        display: flex;
+    }
+    /* 
+        display: none;
+    } */
+    .carousel-text h1{
+        font-size: 2rem;
+    }
+    .image-content{
+        font-size: 1rem;
+    }
+    .about-top{
+        display: block;
+    }
+    .about-bottom-right{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding-left: 100px;
+    }
+    .about-about-wrapper{
+        margin-top: -20px;
+    }
+    .about-left{
+        padding-right: 10px;
+    }
+    .about-right img{
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+    }
+    .about-bottom{
+        display: block;
+    }
+    .service-images{
+        display: block;
+    }
+    .gallery-images{
+        display: block;
+    }
+    .service-images img{
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+    }
+    .service-images p{
+        margin-bottom: 50px;
+    }
+    .gallery-images img{
+        width: 100%;
+    }
+    .footer-top{
+        gap: 20px;
+    }
+    .breadcrumb-container{
+        gap: 0;
+    }
+    .about-about{
+        display: block;
+    }
+    .about-right-image img{
+        width: 100%;
+    }
+    .about-services img{
+        width: 80px;
+    }
+    .about-why-choose-us{
+        display: block;
+    }
+    .swiper{
+        top: -180px;
+        left: 200px;
+    }  
+    .about-why-choose-us-left-img{
+        position: relative;
+    }
+    .about-why-choose-us-left img{
+        width: 100%;
+    }
+    .dark{
+        width: 350px !important;
+    }
+    .breadcrumb-gif-a img{
+        width: 400px;
+    }
+    .maintenance img{
+        width: 100%;
+    }
+    .maintain{
+        width: 700px !important;
+    }
+    .quote{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .quote-left img{
+        width: 100%;
+        margin-top: -20px;
+    }
+    
+}
+
+@media (max-width: 767px){
+    .checkbtn{
+        display: block;
+        margin-left: 0px;
+    }
+    .nav-container{
+        gap: 0;
+        justify-content: space-between;
+    }
+    .nav-logo img{
+        width: 200px;
+    }
+    .hero-bg-images img{
+        height: 70vh;
+    }
+    .carousel-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: left;
+        color: white;
+        z-index: 10;
+        text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
+        padding: 10px;
+        width: 100%;
+    }
+    .carousel-text br{
+        display: none;
+    }
+    .carousel-text h1{
+        font-size: 2rem;
+    }
+    .about-bottom-right{
+        display: grid;
+        grid-template-columns: 1fr;
+        padding-left: 10px;
+    }
+    .progress-container{
+        display: flex;
+        width: 350px;
+    }
+    .progress-headings{
+        margin-top: 20px;
+        margin-left: 20px;
+        text-align: left;
+    }
+    .progress-circle-1,
+    .progress-circle-2,
+    .progress-circle-3 {
+        margin: 0;
+    }
+    .about-wrapper{
+        padding-top: 60px;
+    }
+    .about-wrapper h1{
+        font-size: 3rem;
+    }
+    .why-choose-us-images{
+        display: block;
+        text-align: center;
+    }
+    
+    .videos-wrapper{
+        padding-top: 20px;
+    }
+    .videos{
+        padding-top: 20px;
+        padding-bottom: 50px;
+    }
+    .videos video{
+        width: 100%;
+        height: 100%;
+        margin-bottom: 20px;
+    }
+    .footer-top{
+        display: block;
+    }
+    .footer-logo{
+        margin-bottom: 20px;
+    }
+    .footer-bottom{
+        display: block;
+    }
+    .breadcrumb-gif img{
+        width: 300px;
+        margin-right: 0;
+        margin-left: -50px;
+    }
+    .breadcrumb-heading{
+        margin-left: -100px;
+        margin-top: -20px;
+    }
+    .about-services p{
+        margin-bottom: 40px;
+    }
+    .swiper{
+        bottom: 180px;
+        left: 50px;
+    }
+    .quality-list li{
+        flex: 1 1 calc(100% - 10px); /* Each list item takes up 50% of the width */
+    }
+    .about-get-quote{
+        display: block;
+    }
+    .about-get-quote-left{
+        text-align: center;
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+    .about-get-quote-right{
+        text-align: center;
+        margin-top: 0;
+        padding-left: 0;
+        padding-top: 0;
+    }
+    .dark{
+        width: 400px !important;
+        margin-left: 10px;
+    }
+    .breadcrumb-gif-a{
+        position: relative;
+    }
+    .breadcrumb-gif-a img{
+        width: 100%;
+        filter: brightness(0.55);
+    }
+    .breadcrumb-heading-a{
+        position: absolute;
+        top: 15%;
+        left: 3%;
+    }
+    .maintain{
+        width: 380px !important;
+    }
+    .outer{
+        width: 400px !important;    
+    }
 }
