--- a/style.css
+++ b/style.css
@@ -63,6 +63,40 @@
     background: var(--primary-color) !important;
     color: var(--secondary-color);
 }
+.need-help {
+  position: fixed;
+  bottom: 10%;
+  right: 10%;
+  z-index: 1;
+  justify-content: right;
+}
+.need-help-btn {
+  background: var(--primary-color);
+  color: white;
+  padding: 15px 25px;
+  border: 1px solid var(--secondary-color);
+  font-size: 38px;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 50%;
+}
+.need-help-form{
+  background-color: var(--primary-color);
+  position: fixed;
+  bottom: 16%;
+  right: 8%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  z-index: 100;
+  width: 300px;
+  height: 500px;
+  padding: 50px 20px;
+  border-radius: 10%;
+}
+.hidden{
+    display: none;
+}
 .hero-wrapper{
     width: 100%;
 }
