--- a/style.css
+++ b/style.css
@@ -439,7 +439,8 @@ a {
   padding: 5px;
 }
 .breadcrumb-heading h1 {
-  margin-top: 70px;
+  margin-top: 0px;
+  padding-top: 20px;
 }
 .about-about-wrapper {
   background: var(--primary-color);
