--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
   box-sizing: border-box;
   font-family: "Outfit", sans-serif;
 }
+p{
+  font-size: 16px;
+}
 .navbar-wrapper {
   background: var(--primary-color);
   color: var(--secondary-color);
@@ -239,8 +242,8 @@
   text-align: left;
 }
 .service-images img {
-  width: 420px;
-  height: 370px;
+  width: 380px;
+  height: 350px;
   transition: scale 0.3s ease-in-out;
 }
 
@@ -415,14 +418,25 @@
   width: fit-content;
 }
 
-/* About Us */
+/* About Us | Gallery | Contact */
 .breadcrumb-wrapper {
   background: var(--primary-color);
   color: var(--secondary-color);
   padding-bottom: 60px;
+  position: relative;
+}
+
+.breadcrumb__overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 .breadcrumb-heading {
   text-align: center;
+  position: relative;
+  z-index: 5;
 }
 .breadcrumb h1 {
   align-items: center;
@@ -746,7 +760,6 @@ textarea::placeholder {
   margin-top: 50px;
 }
 
-
 .furniture-assembly-wrapper {
   background: var(--primary-color);
   color: var(--secondary-color);
@@ -762,65 +775,68 @@ textarea::placeholder {
 .furniture-assembly-left h4 {
   margin-top: 80px;
 }
-.garden-maintenance-bg{
-  background-image: url('./gifs/garden-maintenance.gif');
+.garden-maintenance-bg {
+  background-image: url("./gifs/garden-maintenance.gif");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   height: 30vh;
 }
-.garden-maintenance-bg h1{
+.garden-maintenance-bg h1 {
   margin-top: 0;
   padding-top: 50px;
   z-index: 10;
 }
-.driveway-washing-bg{
-  background-image: url('./gifs/driveway-pressure.gif');
+.driveway-washing-bg {
+  background-image: url("./gifs/driveway-pressure.gif");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   height: 30vh;
 }
-.driveway-washing-bg h1{
+.driveway-washing-bg h1 {
   margin-top: 0;
   padding-top: 50px;
   z-index: 10;
 }
-.outdoor-maintenance-bg{
-  background-image: url('./gifs/outdoormaintenance.gif');
+.outdoor-maintenance-bg {
+  background-image: url("./gifs/outdoormaintenance.gif");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   height: 30vh;
 }
-.outdoor-maintenance-bg h1{
+.outdoor-maintenance-bg h1 {
   margin-top: 0;
   padding-top: 50px;
   z-index: 10;
 }
-.handyman-services-bg{
-  background-image: url('./gifs/handyman-services.gif');
+.handyman-services-bg {
+  background-image: url("./gifs/handyman-services.gif");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   height: 30vh;
 }
-.handyman-services-bg h1{
+.handyman-services-bg h1 {
   margin-top: 0;
   padding-top: 50px;
   z-index: 10;
 }
-.furniture-assembly-bg{
-  background-image: url('./gifs/furniture-assembly.gif');
+.furniture-assembly-bg {
+  background-image: url("./gifs/furniture-assembly.gif");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   height: 30vh;
 }
-.furniture-assembly-bg h1{
+.furniture-assembly-bg h1 {
   margin-top: 0;
   padding-top: 50px;
   z-index: 10;
+}
+.google-maps-wrapper{
+  background: var(--third-color);
 }
 
 @media (max-width: 1200px) {
@@ -1072,8 +1088,8 @@ textarea::placeholder {
     margin-top: 20px;
   }
   .dropdown .active {
-  font-size: 1.5rem;
-  font-weight: bold;
+    font-size: 1.5rem;
+    font-weight: bold;
   }
   .furniture-assembly-container {
     display: block;
@@ -1084,7 +1100,7 @@ textarea::placeholder {
   .furniture-assembly-left h4 {
     padding-top: 80px;
     margin-top: 0;
-  } 
+  }
 }
 
 @media (max-width: 767px) {
@@ -1229,10 +1245,10 @@ textarea::placeholder {
     margin-top: 20px;
   }
   .dropdown .active {
-  font-size: 1.5rem;
-  font-weight: bold;
+    font-size: 1.5rem;
+    font-weight: bold;
   }
-  .breadcrumb-heading{
+  .breadcrumb-heading {
     display: block;
     margin: 0 auto;
   }
@@ -1262,7 +1278,7 @@ textarea::placeholder {
     font-size: 1rem;
     font-weight: bold;
   }
-  .breadcrumb-heading{
+  .breadcrumb-heading {
     margin-left: 20px;
   }
 }
